cp project/force-app/main/default/objects/CP_Document__c/CP_Document__c.object-meta.xml
<CustomObject>
    <label>CP Document</label>
    <pluralLabel>CP Documents</pluralLabel>
    <nameField>
        <label>CP Document Name</label>
        <type>Text</type>
        <length>80</length>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>