cp project/force-app/main/default/objects/CP_Document__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <label>Channel Partner</label>
    <type>Lookup</type>
    <referenceTo>Channel_Partner__c</referenceTo>
    <relationshipLabel>CP Documents</relationshipLabel>
    <relationshipName>CP_Documents</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>