cp project/force-app/main/default/objects/CP_Document__c/fields/Current_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_Version__c</fullName>
    <label>Current Version</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>