cp project/force-app/main/default/objects/CP_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>