cp project/force-app/main/default/objects/CP_Document__c/fields/External_App_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>External_App_Document_ID__c</fullName>
    <label>External App Document ID</label>
    <length>120</length>
    <type>Text</type>
    <externalId>true</externalId>
</CustomField>