cp project/force-app/main/default/objects/CP_Document__c/fields/Storage_Path__c.field-meta.xml
<CustomField>
    <fullName>Storage_Path__c</fullName>
    <label>Storage Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>