cp project/force-app/main/default/objects/CP_Document__c/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <label>Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Verified</fullName><label>Verified</label></value>
            <value><fullName>Rejected</fullName><label>Rejected</label></value>
            <value><fullName>Superseded</fullName><label>Superseded</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>