cp project/force-app/main/default/objects/CP_Document__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <label>Verified By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CP Documents</relationshipLabel>
    <relationshipName>Verified_CP_Documents</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>