cp project/force-app/main/default/objects/CP_Document__c/fields/Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Verified_Date__c</fullName>
    <label>Verified Date</label>
    <type>DateTime</type>
</CustomField>